# cineo

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: lint.yml
core/: settings.py  urls.py
media/: admin.py  forms.py  tasks.py  urls.py  views.py
media/dtos/: __init__.py  base.py  title.py
media/forms/: __init__.py  receive_title.py  signup.py  update_user_title_state.py
media/migrations/: 0001_initial.py  0002_alter_title_options_alter_title_duration_min_and_more.py  0003_franchise_season_episode_userprogress_usertitlestate_and_more.py  0004_userepisodestate_title_category_and_more.py  0005_alter_title_options_and_more.py  0006_title_is_series.py
media/models/: __init__.py  episode.py  franchise.py  season.py  title.py  user_state.py
media/services/: importer.py  title_receiver.py  user_state.py
media/tasks/: __init__.py  import_title.py  receive_title.py  remove_from_watchlist.py  toggle_episode_watched.py  update_user_title_state.py
media/templatetags/: media_extras.py
media/usecases/: __init__.py  base_usecase.py  get_title_detail.py  get_title_list.py  receive_title.py  remove_from_watchlist.py  signup.py  toggle_episode_watched.py  update_user_title_state.py
media/views/: __init__.py  import_media.py  receive_title.py  remove_from_watchlist.py  sign.py  state.py  title_detail.py  title_list.py  toogle_episode_watched.py  update_user_title_state.py
static/css/: base.css
templates/: base.html
(+32 files in other folders)
