[project]
name = "cineo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.9",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "celery>=5.4.0",
    "redis>=5.2.1",
    "psycopg[binary]>=3.2.3",
    "flower>=2.0.1",
]

[dependency-groups]
dev = [
    "celery-types>=0.24.0",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.1",
    "watchfiles>=1.1.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["cineo"]
